<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/course_metadata"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:paddingRight="16dp"
    android:paddingTop="4dp"
    android:paddingBottom="8dp"
    android:paddingLeft="@dimen/material_padding_left"
    tools:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/course_notes_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            style="@style/section_metadata_containers"
            android:orientation="vertical"
            android:id="@+id/course_notes_wrapper">
        <TextView
            android:id="@+id/course_notes_title"
            android:text="@string/course_notes"
            style="@style/primary_metadata" />

        <TextView
            android:id="@+id/course_notes_text"
            tools:text="@string/metadata_dummy_text"
            style="@style/SecondaryMetadataTextStyle"/>

        </LinearLayout>
        <View
            android:id="@+id/fsl_divider1"
            style="@style/divider.metadata"
            android:layout_below="@+id/course_notes_wrapper" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/course_subject_notes_layout"
        android:layout_below="@+id/course_notes_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            style="@style/section_metadata_containers"
            android:orientation="vertical"
            android:id="@+id/course_subject_notes_wrapper">

        <TextView
            android:id="@+id/course_subject_notes_title"
            android:text="@string/subject_notes"
            style="@style/primary_metadata" />

        <TextView
            android:id="@+id/course_subject_notes_text"
            tools:text="@string/metadata_dummy_text"
            style="@style/SecondaryMetadataTextStyle"
         />

        </LinearLayout>
        <View
            android:id="@+id/fsl_divider2"
            style="@style/divider.metadata"
            android:layout_below="@+id/course_subject_notes_wrapper" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/course_prereq_layout"
        android:layout_below="@+id/course_subject_notes_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            style="@style/section_metadata_containers"
            android:orientation="vertical"
            android:id="@+id/course_prereq_wrapper">

        <TextView
            android:id="@+id/course_prereq_title"
            android:text="Prerequisites"
            tools:ignore="HardcodedText"
            style="@style/primary_metadata" />

        <TextView
            android:id="@+id/course_prereq_text"
            tools:text="@string/metadata_dummy_text"
            style="@style/SecondaryMetadataTextStyle" />

        </LinearLayout>
        <View
            android:id="@+id/fsl_divider3"
            style="@style/divider.metadata"
            android:layout_below="@+id/course_prereq_wrapper" />
    </RelativeLayout>

</RelativeLayout>

