<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.AppBarLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/app_bar_layout"
    android:transitionName="@string/transition_name_tool_background"
    style="@style/ToolbarStyle.Big"
    android:theme="@style/RutgersCT.ToolbarTheme"
    android:transitionGroup="true">

    <android.support.design.widget.CollapsingToolbarLayout
        android:id="@+id/collapsing_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_scrollFlags="scroll">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="parallax"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:theme="@style/RutgersCT.ToolbarTheme"
            />

        <RelativeLayout
            android:id="@+id/course_header_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="42dp"
            app:layout_collapseMode="parallax"
            android:paddingLeft="72dp">

            <TextView
                android:id="@+id/course_title_text"
                tools:text="COMPUTERS &amp; PROGRAMMING TEST OF A LONGER COURSE TITLE"
                style="@style/ToolbarDisplayStyle"
                android:layout_alignLeft="@+id/subtitle"
                android:layout_alignStart="@+id/subtitle"
                android:layout_above="@+id/subtitle" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="3sp"
                tools:text="3"
                style="@style/ToolbarSubtitleStyle"/>

            <TextView
                android:id="@+id/shortenedCourseInfo"
                tools:text="Computer Science > 101"
                android:singleLine="true"
                android:layout_above="@+id/course_title_text"
                android:layout_alignLeft="@+id/subtitle"
                android:layout_alignStart="@+id/subtitle"
                style="@style/ToolbarSubtitleStyle.Normal"/>

            <TextView
                android:id="@+id/credits_title"
                android:layout_alignTop="@+id/subtitle"
                android:layout_toRightOf="@+id/subtitle"
                android:text="@string/lowercase_credits"
                style="@style/ToolbarSubtitleStyle.Normal"/>

            <TextView
                android:id="@+id/openSections_text"
                android:layout_alignBottom="@+id/credits_title"
                android:paddingLeft="16dp"
                android:layout_marginRight="3sp"
                android:layout_toRightOf="@+id/credits_title"
                tools:text="3"
                style="@style/ToolbarSubtitleStyle"/>

            <TextView
                android:id="@+id/openSections_title"
                android:layout_alignTop="@+id/openSections_text"
                android:layout_toRightOf="@+id/openSections_text"
                android:text="@string/open_sections_of"
                style="@style/ToolbarSubtitleStyle.Normal"/>

            <TextView
                android:id="@+id/totalSections_text"
                android:layout_alignBottom="@+id/openSections_title"
                android:paddingLeft="3dp"
                android:layout_toRightOf="@+id/openSections_title"
                tools:text="3"
                style="@style/ToolbarSubtitleStyle"/>
        </RelativeLayout>

    </android.support.design.widget.CollapsingToolbarLayout>
</android.support.design.widget.AppBarLayout>


