<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_bar_layout"
    android:transitionName="@string/transition_name_tool_background"
    style="@style/ToolbarStyle.Big"
    android:clickable="true"
    android:theme="@style/RutgersCT.ToolbarTheme"
    android:transitionGroup="true">

    <android.support.design.widget.CollapsingToolbarLayout
        android:id="@+id/collapsing_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_scrollFlags="scroll">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="parallax"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <RelativeLayout
            android:id="@+id/course_header_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_collapseMode="parallax">

            <TextView
                android:id="@+id/course_title_text"
                android:gravity="center_vertical"
                style="@style/ToolbarTitleStyle"
                android:minHeight="?attr/actionBarSize"
                tools:text="COMPUTERS &amp; PROGRAMMING TEST OF A LONGER COURSE TITLE"
                android:paddingRight="60dp"
                android:paddingLeft="60dp" />

            <FrameLayout
                android:layout_width="@dimen/default_circle_view_size"
                android:layout_height="@dimen/default_circle_view_size"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:transitionName="@string/transition_name_circle_view"
                android:id="@+id/frameLayout">

                <com.tevinjeffrey.rutgersct.ui.utils.CircleView
                    android:id="@+id/hidden_circle_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:backgroundColorValue="@color/accent"
                    app:titleColor="@android:color/white"
                    app:titleSize="13sp"
                    app:titleText="Q1"
                    android:visibility="invisible" />

            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <LinearLayout
                    android:id="@+id/termContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="32dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:id="@+id/semesterText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="4dp"
                        tools:text="Summer 2012"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:transitionName="instructor_name"
                        android:alpha="1"
                        style="@style/ToolbarSubtitleStyle.Normal"
                        android:maxLines="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/instructors_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginRight="85dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true">

                    <TextView
                        android:id="@+id/instructors_text"
                        tools:text="MAELLO | CAROLLA "
                        android:textColor="@android:color/white"
                        android:alpha="1"
                        android:textStyle="bold"
                        style="@style/ToolbarSubtitleStyle.Normal"
                        android:maxLines="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:transitionGroup="false"
                    android:weightSum="3"
                    android:layout_above="@+id/termContainer"
                    android:layout_marginBottom="16dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true">

                    <LinearLayout
                        android:id="@+id/tSection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/sectionNumber_text"
                            tools:text="Q2"
                            style="@style/SectionInfoDataText" />

                        <TextView
                            android:id="@+id/shortenedCourseInfo"
                            android:text="@string/section"
                            style="@style/ToolbarSubtitleStyle.Normal" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tIndex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/indexNumber_text"
                            tools:text="34562"
                            style="@style/SectionInfoDataText" />

                        <TextView
                            android:id="@+id/indexNumber_title"
                            android:text="@string/index"
                            style="@style/ToolbarSubtitleStyle.Normal" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tCredits"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/subtitle"
                            tools:text="4"
                            style="@style/SectionInfoDataText" />

                        <TextView
                            android:id="@+id/credits_title"
                            android:text="@string/credits"
                            style="@style/ToolbarSubtitleStyle.Normal" />
                    </LinearLayout>

                </LinearLayout>



            </RelativeLayout>


        </RelativeLayout>

    </android.support.design.widget.CollapsingToolbarLayout>

</android.support.design.widget.AppBarLayout>